--- a/present.ipynb
+++ b/present.ipynb
@@ -564,6 +564,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Please open file \"unittest\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### If you want run this test, please open file \".\\unittest\\test_mr.py\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -597,6 +611,13 @@
    "metadata": {},
    "source": [
     "# Exception management"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### If you want run this test, please open file \".\\unittest\\test_mr2.py\""
    ]
   },
   {
@@ -646,6 +667,13 @@
    "metadata": {},
    "source": [
     "# Parametrized test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### If you want run this test, please open file \".\\unittest\\test_mr_subTest.py\""
    ]
   },
   {
@@ -750,6 +778,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### If you want run this test, please open file \".\\unittest\\subTest_add_test.py\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -785,6 +820,13 @@
    "metadata": {},
    "source": [
     "#### Basic test cases with pytest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### please open file \"pytest\""
    ]
   },
   {
@@ -839,19 +881,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'MergeRequestStatus' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;129m@pytest\u001b[39m\u001b[38;5;241m.\u001b[39mmark\u001b[38;5;241m.\u001b[39mparametrize(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontext,expected_status\u001b[39m\u001b[38;5;124m\"\u001b[39m, (\n\u001b[0;32m      2\u001b[0m     (\n\u001b[0;32m      3\u001b[0m         {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdownvotes\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mset\u001b[39m(), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mupvotes\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mset\u001b[39m()},\n\u001b[1;32m----> 4\u001b[0m         MergeRequestStatus\u001b[38;5;241m.\u001b[39mPENDING\n\u001b[0;32m      5\u001b[0m     ),\n\u001b[0;32m      6\u001b[0m     (\n\u001b[0;32m      7\u001b[0m         {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdownvotes\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mset\u001b[39m(), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mupvotes\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdev1\u001b[39m\u001b[38;5;124m\"\u001b[39m}},\n\u001b[0;32m      8\u001b[0m         MergeRequestStatus\u001b[38;5;241m.\u001b[39mPENDING,\n\u001b[0;32m      9\u001b[0m     ),\n\u001b[0;32m     10\u001b[0m     (\n\u001b[0;32m     11\u001b[0m         {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdownvotes\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdev1\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mupvotes\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mset\u001b[39m()},\n\u001b[0;32m     12\u001b[0m         MergeRequestStatus\u001b[38;5;241m.\u001b[39mREJECTED,\n\u001b[0;32m     13\u001b[0m     ),\n\u001b[0;32m     14\u001b[0m     (\n\u001b[0;32m     15\u001b[0m         {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdownvotes\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mset\u001b[39m(), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mupvotes\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdev1\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdev2\u001b[39m\u001b[38;5;124m\"\u001b[39m}},\n\u001b[0;32m     16\u001b[0m         MergeRequestStatus\u001b[38;5;241m.\u001b[39mAPPROVED,\n\u001b[0;32m     17\u001b[0m     ),\n\u001b[0;32m     18\u001b[0m ),)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtest_acceptance_threshold_status_resolution\u001b[39m(context, expected_status):\n\u001b[0;32m     20\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m AcceptanceThreshold(context)\u001b[38;5;241m.\u001b[39mstatus() \u001b[38;5;241m==\u001b[39m expected_status\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'MergeRequestStatus' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@pytest.mark.parametrize(\"context,expected_status\", (\n",
     "    (\n",
