--- a/present.ipynb
+++ b/present.ipynb
@@ -830,6 +830,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### If you want run this test, please open file \".\\pytest\\test_mr.py\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -875,6 +882,13 @@
    "metadata": {},
    "source": [
     "# parametrized test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### If you want run this test, please open file \".\\pytest\\test_parametrized.py\""
    ]
   },
   {
@@ -934,12 +948,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pytest"
+    "###### If you want run this test, please open file \".\\pytest\\test_mr_fixture.py\""
    ]
   },
   {
@@ -1163,6 +1175,13 @@
    "metadata": {},
    "source": [
     "# mock objects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Opent file \"mock\""
    ]
   },
   {
@@ -1397,6 +1416,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### If you want run this test, please open file \".\\mock\\test_mock_1.py\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -1437,6 +1463,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### If you want run this test, please open file \".\\mock\\test_mock_1.py\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -1453,6 +1486,13 @@
    "metadata": {},
    "source": [
     "# a usecase for test doubles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### If you want run this test, please open file \".\\mock\\test_mock_2.py\""
    ]
   },
   {
@@ -1527,7 +1567,7 @@
    "metadata": {},
    "source": [
     "<div dir=\"rtl\" style=\"text-align: right; font-family: Arial, sans-serif; line-height: 1.8;\">\n",
-    "    <h3>بازنویسی (Refactoring)</h3>\n",
+    "    <h1>بازنویسی (Refactoring)</h1>\n",
     "    <p>\n",
     "        بازنویسی به معنای تغییر ساختار کد از طریق بازآرایی و تغییر نمای داخلی آن، \n",
     "        بدون ایجاد تغییر در رفتار خارجی آن است.\n",
@@ -1670,22 +1710,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pytest' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;129m@pytest\u001b[39m\u001b[38;5;241m.\u001b[39mfixture\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mbuild_status\u001b[39m():\n\u001b[0;32m      3\u001b[0m     bstatus \u001b[38;5;241m=\u001b[39m BuildStatus(Mock())\n\u001b[0;32m      4\u001b[0m     bstatus\u001b[38;5;241m.\u001b[39mbuild_date \u001b[38;5;241m=\u001b[39m Mock(return_value\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2018-01-01T00:00:01\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pytest' is not defined"
-     ]
-    }
-   ],
+   "source": [
+    "###### If you want run this test, please open file \".\\refactoring\\test_refactoring_2.py\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "@pytest.fixture\n",
     "def build_status():\n",
@@ -1708,7 +1743,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "qenv",
    "language": "python",
    "name": "python3"
   },
